[package]
name = "bincode"
version = "1.0.0"
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Daniel Griffen"]
exclude = ["logo.png", "tests/*", "examples/*", ".gitignore", ".travis.yml", "changelist.org"]

publish =  true

repository = "https://github.com/TyOverby/bincode"
documentation = "https://docs.rs/bincode"
readme = "./readme.md"
categories = ["network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"

[dependencies]
byteorder = { version = "1.2.0", default-features = false }
serde = { version = "^1.0.27", default-features = false, features = ["alloc"]}
core_io = { version = "0.1.20180307", features = ["collections"] }

[dev-dependencies]
serde_bytes = { version = "^0.10.3", default-features = false }
serde_derive = { version = "^1.0.27", default-features = false }

